Finish contacts APIs
